made some major fixes to the x-overflow problem

--- a/styles/general.css
+++ b/styles/general.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   list-style: none;
+  overflow-x: hidden;
   transition: 0.2s ease all;
 }
 
